--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Продажа земельного участка под коммерческую деятельность в Белгородской области 22</title>
+<title>Продажа земельного участка под коммерческую деятельность в Белгородской области</title>
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
 	<meta name="viewport" content="width=device-width">
 	<meta name="description" content="Продаем земельный участок на федеральной трассе Москва - Симферополь под строительства заправки (АЗС) в Белгородской области. В 15 км от города Белгорода в населенном пункте Новая Деревня." />
